# GlulamShellPy_SoftwareX_ready_v0.1.0

./: CITATION.cff  CONTRIBUTING.md  Examples.rar  LICENSE.txt  P-I0.json  P-IE.json  P-IG.json  README.md  RG-I0.json  RG-IE.json  RG-IG.json  SR-I0.json  SR-IE.json  SR-IG.json  pyproject.toml  requirements.txt  zhaojingxian-1.json
